tests/codegen/fail/interface/trait/field_double_underscored.rs
use juniper::graphql_interface;

#[graphql_interface]
trait Character {
    fn __id(&self) -> &str;
}

fn main() {}
